implement get news port #33
